- Allow fcache on P2; must be explicitly enabled though
- Fixed filename extension bug in C/C++ output
- Fixed C++ output for the serial printf functions
- Fixed some problems with output of method calls in C output
- Changed the way @@@ relocation is done, and made some P2
  instructions use it so that HUB references work even if there are
  Spin methods present.

Version 3.9.22
- Made sure C enums start at 0
- Do not change the order of class declarations, so that sizes can be
  properly calculated
- Always put array variables on the stack
- Fixed some type promotion problems in C
- Fixed a pointer offset bug that affected all languages
- Fixed loop strength reduction of the '?' operator

Version 3.9.21
- Increased stack size on Windows to prevent a crash
- Added if_00, if_same, and other missing P2 conditions
- Fixed an incorrect result for ">| 0" on P2
- Added some P2 specific optimizations
- Added Spin serial drivers to default include directory
- Rewrote C static and variable handling code to fix a number of bugs
  and to allow nested variable scopes to work
- Fixed an optimizer bug where register masks could be created before
  the variables they dependend on were initialized
- Fixed a P2 optimizer bug affecting varargs
- Fixed several C type casting bugs including conversion of arrays and
  functions to pointers
- Fixed handling of enums in C
- Fixed checking for duplicate labels
- Added some standard Spin serial routines to the include/spin folder

Version 3.9.20
- Allow closures to access variables and functions in the enclosing object
- Fixed some parsing problems with inline assembly
- Fixed incorrect inlining of some functions in -O2
- Fixed some C parser errors
- Fixed some C type conversion errors
- Fixed encodings of setpiv and setpix instructions
- Fixed a bug in chained assignments of register ranges

Version 3.9.19
- Fixed problems with path searches
- Fixed HEAPSIZE constant to work properly
- Added short form of lambda expressions to BASIC