@@ -1,0 +1,11 @@
+#include <propeller.h>
+#include "test155.h"
+
+char test155::dat[] = {
+  0xdf, 0xe0, 0x7f, 0x86, 0xdf, 0xe0, 0x7f, 0x86, 0x00, 0x00, 0x00, 0x00, 0xc3, 0x9f, 0x00, 
+};
+int32_t test155::Get(void)
+{
+  return ((char *)&dat[12])[0];
+}
+
