@@ -1,0 +1,13 @@
+#ifndef test155_Class_Defined__
+#define test155_Class_Defined__
+
+#include <stdint.h>
+
+class test155 {
+public:
+  static char dat[];
+  static int32_t 	Get(void);
+private:
+};
+
+#endif
