@@ -9,6 +9,8 @@ Version 3.9.23
 - Changed the way @@@ relocation is done, and made some P2
   instructions use it so that HUB references work even if there are
   Spin methods present.
+- Allow Unicode characters above 0x7f in PASM expressions
+- When parsing a UCS-16 file, convert characters to UTF-8
 
 Version 3.9.22
 - Made sure C enums start at 0
